src/objects/Seasonal_Address__c.object
<CustomObject>
    <description>Object for storing a contact&apos;s addresses with start and end dates.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Seasonal Addresses</relationshipLabel>
        <relationshipName>Seasonal_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Before_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End Before Start</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Day__c</fullName>
        <label>End Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Month_Number__c</fullName>
        <label>End Month Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Month__c</fullName>
        <label>End Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Day__c</fullName>
        <label>Start Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Month_Number__c</fullName>
        <label>Start Month Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <label>Start Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Months</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Seasonal Address</label>
    <nameField>
        <displayFormat>SA-{00000}</displayFormat>
        <label>Seasonal Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seasonal Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>